--- a/scss/style.scss
+++ b/scss/style.scss
@@ -20,9 +20,13 @@
   font-weight: 900;
 }
 
+
+
 .r {
   font-family: Roboto;
 }
+
+
 
 .fs20 {
   font-size: 20px;
@@ -30,6 +34,8 @@
   line-height: 1.4;
   letter-spacing: normal;
 }
+
+
 
 // GENERAL SETTINGS
 *{
@@ -39,6 +45,9 @@
   line-height: 150%;
 }
 
+body {
+  overflow-x: hidden;
+}
 .orange {
   color: #f54b19;
 }
@@ -64,9 +73,41 @@ ul{
   list-style: none;
 }
 
+img {
+
+  opacity: 0;
+  transition: all 500ms;
+}
 
 
 // DECORATION
+
+
+.fade {
+  opacity: 1.0;
+  transition: all 500ms;
+}
+
+.active {
+  color: orangered;
+}
+
+.active:after{
+  content: url("../src/img/main/r_arrow.svg");
+  position: relative;
+  bottom: -1px;
+  left: 5px;
+}
+
+
+
+.triangle {
+  width: 0;
+  height: 0;
+  border-style: solid;
+  border-width: 9px 7px 0 7px;
+  border-color: #ffffff transparent transparent transparent;
+}
 
 @mixin WhiteStripes{
 
@@ -87,6 +128,83 @@ ul{
   background-image: linear-gradient(to top, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%)
 }
 
+@mixin OrangeGradientToBottom {
+  background-image: linear-gradient(to bottom, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%)
+}
+
+.xxx1,
+.xxx2,
+.xxx3,
+.xxx4{
+  box-sizing: border-box;
+  position: relative;
+  //width: 90%;
+  margin: 5rem 10rem;
+  padding: 5rem;
+  border: 2px solid #f54b19;;
+}
+
+.xxx1 {
+  border-right: none;
+  border-bottom: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+xxx1_1 {
+  border-right: none;
+  border-bottom: none;
+  margin-bottom: 0;
+  padding-bottom: 0;
+}
+
+.xxx2 {
+  border-left: none;
+  border-bottom: none;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding: 0 0 2rem 0;
+}
+
+.xxx3 {
+  border-right: none;
+  border-top: none;
+  margin-top: 0;
+}
+
+.xxx4{
+  border-bottom: none;
+  border-top: none;
+  border-right: none;
+  margin: 0 10rem;
+}
+
+
+/*line on top/right*/
+.xxx1::before {
+  content: '';
+  background-image: url(../src/img/footer/Triangle.svg);
+  background-size: 50px 50px;
+  background-repeat: no-repeat;
+  box-sizing: border-box;
+  position: absolute;
+  top: -27px;
+  right: 0;
+  width: 50px;
+  height: 50px;
+  transform: translateX(100%)rotate(39deg)
+}
+
+.xxx2::before {
+  content: attr(data-label);
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  transform: translateX(-50%) translateY(-55%);
+  padding: .5rem 12rem;
+  background: #fff
+}
 
 .logo {
   font-family: Muli;
@@ -100,6 +218,31 @@ ul{
   line-height: 33px;
   letter-spacing: 0.005em;
   text-transform: uppercase;
+}
+
+.bigger{
+  font-size: 36px;
+  line-height: 43px;
+  font-family: Rubik;
+  margin-left: 15rem;
+}
+
+.bigger_center{
+  font-size: 36px;
+  line-height: 43px;
+  font-family: Rubik;
+}
+
+
+//FLOW
+@mixin F_R {
+  display: flex;
+  align-items: center;
+}
+
+@mixin F_C {
+  display: flex;
+  flex-direction: column;
 }
 
 // HEADER SECTION
@@ -126,12 +269,23 @@ header {
 
 .dropbtn{
   font-family: Rubik;
+  position: relative;
+}
+
+.dropbtn::after{
+  content: '';
+  position: absolute;
+  bottom: 5px;
+  right: -18px;
+  border-style: solid;
+  border-width: 9px 7px 0 7px;
+  border-color: #ffffff transparent transparent transparent;
 }
 
 
 // DROPDOWN
-#dropdown_wrapper {
-  background-color: #252a2b;
+.dropdown_wrapper {
+  background-color: rgba(23,23,23,1);
   display: none;
 
   justify-content: space-around;
@@ -139,14 +293,25 @@ header {
   width: 100%;
   left: 0;
   top: 98px;
-  padding: 45px;
+  padding: 45px 15rem;
+
+
+  div:nth-child(1) {
+    flex-basis: 20%;
+  }
+  div:nth-child(2) {
+    flex-basis: 20%;
+  }
+  div:nth-child(3) {
+    flex-basis: 60%;
+  }
 
 
   .menu_category_img {
     position: relative;
   }
 
-  #change-image {
+  .change-image {
     position: relative;
     z-index: 1;
   }
@@ -156,19 +321,21 @@ header {
     width: 500px;
     position: absolute;
     top: 55px;
-    right: -40px;
+    left: 160px;
     z-index: 0;
-    background-image: linear-gradient(to top, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);;
+    @include OrangeGradient;
   }
 }
 
 
 // MAIN TOP SECTION
+
 .main_top_wrapper {
   background-color: #171717;
   background-image: url("../src/img/main/Main-triangle-gradient.webp");
+  background-repeat: no-repeat;
   color: white;
-  height: 100vh;
+  height: 105vh;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -185,143 +352,365 @@ header {
   margin-top: 24px;
 }
 
+//MAIN SERVICE SECTION
+.service_wrapper{
+  display: flex;
+  color: white;
+
+  div{
+    flex-basis: 33%;
+  }
+}
+
+.main_service_container {
+  background-color: #171717;
+  position: relative;
+
+  .service_triangles{
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    bottom: -69px;
+
+     img:first-child {
+        width: 25px;
+        height: 25px;
+        transform: translate(10px,50px);
+    }
+
+    img:nth-child(2) {
+      width: 55px;
+      height: 55px;
+      transform: translateX(55px) rotate(60deg)
+    }
+    img:last-child {
+      width: 100px;
+      height: 100px;
+      transform: rotate(80deg)translateY(20px)
+    }
+  }
+
+}
 
 
-// FOOTER SECTION
 
-footer {
+.main_service_wrapper{
+  @include F_C;
+  color: white;
+
+
+  .main_service_top_container{
+    @include F_R;
+    position: relative;
+
+    .main_top_triangles {
+      position: absolute;
+      right: 0;
+      @include F_C;
+
+      img:first-child{
+        transform: translate(50px, 20px);
+      }
+      img:last-child{
+        width: 25px;
+        transform: translate(60px, 20px)rotate(45deg);
+      }
+    }
+  }
+  .menu_service_img{
+    @include WhiteStripes;
+    position: relative;
+    transform: translateY(260px);
+
+    img {
+      z-index: 1;
+      position: relative;
+    }
+
+    .menu_services_img_border{
+      @include OrangeGradientToBottom;
+      max-width: 423px;
+      height: 423px;
+      position: relative;
+      top: -230px;
+      left: -50px;
+      z-index: 0;
+    }
+    .menu_services_stripes{
+      position: absolute;
+      right: -50px;
+      top: -50px;
+      z-index: 0;
+  }
+}
+
+  .main_service_bottom_container{
+    height: 200px;
+  }
+}
+
+//  WHY WE SECTION
+.main_why_we {
+  @include F_C;
+  align-items: center;
+
+  .why_we_slogan{
+    transform: translateY(-25px);
+
+  }
+
+  .why_we_wrapper{
+    display: flex;
+    .why_container{
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      margin: 50px;
+      width: 360px;
+      height: 312px;
+      box-shadow: 0 0 8px rgba(0, 0, 0, 0.15);
+    }
+  }
+}
+
+
+
+//  HOW WE WORK SECTION
+
+.main_how_we_work{
   display: flex;
   flex-direction: column;
   color: white;
 
 
-
-  .footer_top {
-    background-color: #171717;
-    height: 900px;
+  .main_how_we_work_top {
     display: flex;
-    justify-content: space-around;
-    margin-top: 150px;
+    background: #171717;
+    padding: 5em 0;
 
-    .footer_top_left {
+
+
+    .how_we_work_right {
         position: relative;
+        transform: translate(77px, -80px);
+        border-right: 2px solid orangered;
+        height: 30em;
 
-      .footer_form_wrapper{
-
-        .footer_form {
-          width: 620px;
-          height: 761px;
-          box-shadow: 4px 0 20px 0 rgba(16, 16, 16, 0.2);
-          background-color: #ffffff;
-          margin-top: 50px;
+        img{
           position: relative;
           z-index: 1;
-        }
-        .footer_form_border{
-          @include OrangeGradient;
-          width: 620px;
-          height: 700px;
-          position: absolute;
-          top: -50px;
-          left: -171px;
-          z-index: 0;
-        }
-      }
-      .footer_triangles{
-        position: absolute;
-        left: -171px;
+          transform: translate(-40px, 120px);
 
-        img:first-child{
-          transform: rotate(35deg);
-          height: 120px;
         }
-        img:last-child{
-          transform: rotate(-30deg);
-          height: 60px;
-        }
-      }
+    }
+    .how_we_work_right:before{
+      content: '';
+      background-image: repeating-linear-gradient(-45deg, transparent, transparent 10px, #ffffff 10px, #FFFFFF 12px);
+      background-repeat: no-repeat;
+      box-sizing: border-box;
+      position: absolute;
+      width: 170px;
+      height: 170px;
+      top: 90px;
+      left: -10px;
+      z-index: 1;
+    }
+    .how_we_work_right:after{
+      content: '';
+      background-image: linear-gradient(to bottom, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
+      //background-size: 50px 50px;
+      background-repeat: no-repeat;
+      box-sizing: border-box;
+      position: absolute;
+      bottom: -80px;
+      right: -15px;
+      width: 580px;
+      height: 510px;
+      z-index: 0;
     }
 
-    .footer_top_right {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;;
 
-      .footer_contacts {
-        display: flex;
+    .xxx1 {
+      height: 100%;
+    }
+  }
+  .main_how_we_work_bottom {
+    height: 200px;
+  }
+}
+
+//        OUR WORKS
+  .main_our_works {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    border-right: none;
+
+    .why_we_slogan {
+      transform: translateY(-25px)
+    }
+    .main_our_works_img_wrapper{
+      width: 100%;
+      .main_gallery {
+        display: grid;
+        grid-template-columns: repeat(4, 368px);
+        grid-template-rows: repeat(3, 245px);
+        grid-gap: 15px;
+        height: 100%;
         justify-content: space-between;
 
-        .f_contacts{
-          display: flex;
-          margin-right: 20px;
-
-          span{
-            margin: 5px 20px 0 0;
-          }
+        .gallery_item img {
+          width: 100%;
+          height: 100%;
         }
       }
-      .contact_map{
-        @include WhiteStripes;
-        position: relative;
-        height: 50%;
-
-        img {
-          position: relative;
-          z-index: 1;
-        }
-
-        div{
-          position: relative;
-          bottom: 230px;
-          left: 375px;
-          z-index: 0;
-        }
-      }
-      .f_mail {
-        max-width: 600px;
+      .long {
+        grid-row: span 2;
       }
     }
   }
 
-  .footer_bottom{
-    box-shadow: 4px 0 20px 0 #101010;
-    background-color: #171717;
-    display: flex;
-    justify-content: space-around;
-    align-items: center;
-    max-height: 210px;
+
+// FOOTER SECTION
+
+footer {
+display: flex;
+flex-direction: column;
+color: white;
 
 
 
-    .footer_menu{
-      text-align: center;
+.footer_top {
+  background-color: #171717;
+  height: 900px;
+  display: flex;
+  justify-content: space-around;
+  margin-top: 150px;
 
-      .footer_copyright {
-        transform: translateY(30px);
+  .footer_top_left {
+      position: relative;
+
+    .footer_form_wrapper{
+
+      .footer_form {
+        width: 620px;
+        height: 761px;
+        box-shadow: 4px 0 20px 0 rgba(16, 16, 16, 0.2);
+        background-color: #ffffff;
+        margin-top: 50px;
+        position: relative;
+        z-index: 1;
+        color: black;
+      }
+      .footer_form_border{
+        @include OrangeGradient;
+        width: 620px;
+        height: 700px;
+        position: absolute;
+        top: -50px;
+        left: -171px;
+        z-index: 0;
       }
     }
+    .footer_triangles{
+      position: absolute;
+      left: -171px;
+      bottom: -15px;
 
-    .footer_social{
+      img:first-child{
+        transform: rotate(35deg)translateY(-25px);
+        height: 120px;
+      }
+      img:last-child{
+        transform: rotate(-30deg);
+        height: 60px;
+      }
+    }
+  }
+
+  .footer_top_right {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;;
+
+    .footer_contacts {
       display: flex;
-      text-align: right;
-      align-items: center;
+      justify-content: space-between;
+
+      .f_contacts{
+        display: flex;
+        margin-right: 20px;
+
+        span{
+          margin: 5px 20px 0 0;
+          width: 30px;
+        }
+      }
+    }
+    .contact_map{
+      @include WhiteStripes;
+      position: relative;
+      height: 50%;
+
+      img {
+        position: relative;
+        z-index: 1;
+      }
 
       div{
-        margin-right: 55px;
-      }
-
-      .social_wrapper{
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        transform: translateY(-35px);
-        height: 188px;
-        width: 61px;
-        background-image: linear-gradient(to top, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
-
-
+        position: relative;
+        bottom: 230px;
+        left: 375px;
+        z-index: 0;
       }
     }
+    .f_mail {
+      max-width: 600px;
+    }
   }
+}
+
+.footer_bottom{
+  box-shadow: 4px 0 20px 0 #101010;
+  background-color: #171717;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  max-height: 210px;
+  z-index: 1;
+
+
+  .footer_menu{
+    text-align: center;
+
+    .footer_copyright {
+      transform: translateY(30px);
+    }
+  }
+
+  .footer_social{
+    display: flex;
+    text-align: right;
+    align-items: center;
+
+    div{
+      margin-right: 55px;
+    }
+
+    .social_wrapper{
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-around;
+      transform: translateY(-35px);
+      height: 188px;
+      width: 61px;
+      background-image: linear-gradient(to top, #ff5b00 11%, #f4511e 46%, #fd3304 79%, #e9150b 99%);
+
+
+    }
+  }
+}
 }
