active menu position

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -324,6 +324,10 @@ header {
   transition: all 500ms;
 }
 
+.active2 {
+  color: orangered;
+}
+
 .dropbtn{
   font-family: Rubik;
   position: relative;
